added style to show section, changed hover and active states

--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -1,5 +1,5 @@
 /************* primary colors ********************/
-$black: #323232;
+$color-primary-dark: #323232;
 $silver: #AFAFAF;
 $white: #ffffff;
 
