--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -7,8 +7,8 @@
 
 
 .footer {
-    background: $black;
-    border: 1px solid $black;
+    background: $color-primary-dark,;
+    border: 1px solid $color-primary-dark;
     color: $white;
     font-style: normal;
     font-weight: 900;
@@ -64,7 +64,7 @@
 
 @include breakpoints.medium {
     .footer {
-        border: 1px solid $black;
+        border: 1px solid $color-primary-dark;
         font-weight: 900;
         display: flex;
         flex-direction: row;
