--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -4,7 +4,7 @@
 @use './fonts';
 
 .header {
-    background: $black;
+    background: $color-primary-dark;
     color: $white;
     width: 100vw;
     display: flex;
