--- a/styles/partials/_main-content.scss
+++ b/styles/partials/_main-content.scss
@@ -85,7 +85,7 @@
         font-size: 1.5rem;
             line-height: 2rem;
             text-align: left;
-            color: $black;
+            color: $color-primary-dark;
 @include breakpoints.medium {
     margin-left: 4rem;
         font-size: 2rem;
@@ -296,7 +296,7 @@
         margin: 0 auto;
 
         &:focus {
-            border: 1px solid $black;
+            border: 1px solid $color-primary-dark;
         }
     }
 
@@ -319,11 +319,11 @@
         height: 40px;
         width: 17rem;
         border-radius: .3125rem;
-        background: $black;
+        background: $color-primary-dark;
         color: $white;
         font-family: "Avenir";
         font-weight: 600;
-        border: 1px solid $black;
+        border: 1px solid $color-primary-dark;
         margin: 0 auto;
         margin-top: 1rem;
         margin-bottom: 1rem;
@@ -418,7 +418,7 @@
             font-weight: 600;
             display: inline-block;
             width: 50%;
-            color: $black;
+            color: $color-primary-dark;
 
 
 
