--- a/styles/shows.css
+++ b/styles/shows.css
@@ -66,9 +66,17 @@
 .main__show {
   font-weight: 600;
   font-size: 1.5rem;
+  line-height: 2rem;
   text-align: left;
-  width: 100%;
+  width: 95%;
   margin-left: 2rem;
+}
+@media only screen and (min-width: 768px) {
+  .main__show {
+    font-size: 3.75rem;
+    line-height: 4.25rem;
+    margin-left: 5rem;
+  }
 }
 @media only screen and (min-width: 1280px) {
   .main__hero {
@@ -164,12 +172,17 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  width: 98%;
+  padding: 1rem;
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
 }
 @media only screen and (min-width: 768px) {
   .section {
     display: inline;
     justify-content: center;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 .section__header {
@@ -181,7 +194,7 @@
   padding-left: 1rem;
   color: #323232;
   display: flex;
-  width: 100%;
+  width: 95%;
 }
 @media only screen and (min-width: 768px) {
   .section__header {
@@ -196,17 +209,25 @@
   text-transform: uppercase;
   color: #AFAFAF;
   font-weight: 600;
-  width: 25%;
+  width: 22%;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin-left: 2rem;
 }
 
 .shows {
   border-bottom: 1px solid #E1E1E1;
-  margin: 1rem;
   padding-bottom: 1rem;
   width: 100%;
   font-size: 1rem;
   padding-left: 1rem;
   color: #323232;
+}
+.shows:hover {
+  background: #FAFAFA;
+}
+.shows:active {
+  background: #E1E1E1;
 }
 @media only screen and (min-width: 768px) {
   .shows {
@@ -214,6 +235,10 @@
     width: 100%;
     flex-direction: row;
     align-self: flex-start;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    justify-content: space-around;
+    align-items: center;
   }
 }
 .shows__button {
@@ -226,22 +251,22 @@
   font-weight: 600;
   border: 1px solid #323232;
 }
+@media only screen and (min-width: 768px) {
+  .shows__button {
+    width: 15rem;
+    margin: 1rem 2rem 1rem 2rem;
+  }
+}
 .shows__button:hover {
   background: #000000;
 }
 .shows__dateHeader, .shows__venueHeader, .shows__locationHeader {
-  font-size: 0.7rem;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
   text-transform: uppercase;
   color: #AFAFAF;
   font-weight: 600;
 }
 .shows__date {
   font-weight: 600;
-}
-
-@media only screen and (min-width: 768px) {
-  div.shows > * {
-    width: 25%;
-    margin: 0.5rem;
-  }
 }/*# sourceMappingURL=shows.css.map */
