--- a/styles/shows.css
+++ b/styles/shows.css
@@ -95,7 +95,7 @@
   padding-left: 1.25rem;
   color: #ffffff;
   background: rgba(50, 50, 50, 0.5);
-  padding-left: 1rem;
+  padding-left: 2rem;
   font-weight: 400;
   font-size: 1rem;
   line-height: 2rem;
@@ -127,6 +127,19 @@
   text-align: center;
   padding: 20px;
 }
+@media only screen and (min-width: 768px) {
+  .main__hero--player {
+    height: 7rem;
+    text-align: center;
+    padding: 20px;
+    z-index: 99;
+    width: 30rem;
+    position: absolute;
+    top: 33rem;
+    left: 4rem;
+    margin: 0;
+  }
+}
 @media only screen and (min-width: 1280px) {
   .main__hero--player {
     height: 7rem;
@@ -135,8 +148,8 @@
     z-index: 99;
     width: 30rem;
     position: absolute;
-    top: 23%;
-    left: 60%;
+    top: 33rem;
+    left: 4rem;
     margin: 0;
   }
 }
@@ -148,8 +161,17 @@
   position: absolute;
   text-align: left;
   padding-top: 20%;
+  padding-left: 2rem;
   color: #ffffff;
   font-weight: 600;
+}
+@media only screen and (min-width: 768px) {
+  .main__hero--content {
+    font-weight: 700;
+    padding-left: 4rem;
+    font-size: 5rem;
+    line-height: 5rem;
+  }
 }
 @media only screen and (min-width: 1280px) {
   .main__hero--content {
