--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -49,7 +49,7 @@
             padding-left: 1.25rem;
             color: $white;
             background: rgb(50, 50, 50, 0.5);
-            padding-left: 1rem;
+            padding-left: 2rem;
             font-weight: 400;
             font-size: 1rem;
             line-height: 2rem;
@@ -82,6 +82,19 @@
             text-align: center;
             padding: 20px;
 
+            @include breakpoints.medium {
+                    height: 7rem;
+                    text-align: center;
+                    padding: 20px;
+                    z-index: 99;
+                    width: 30rem;
+                    position: absolute;
+                    top: 33rem;
+                    left: 4rem;
+                    margin: 0;
+            
+                }
+
             @include breakpoints.large {
                 height: 7rem;
                 text-align: center;
@@ -89,8 +102,8 @@
                 z-index: 99;
                 width: 30rem;
                 position: absolute;
-                top: 23%;
-                left: 60%;
+                top: 33rem;
+                left: 4rem;
                 margin: 0;
 
             }
@@ -106,8 +119,17 @@
             position: absolute;
             text-align: left;
             padding-top: 20%;
+            padding-left: 2rem;
             color: $white;
             font-weight: 600;
+
+            @include breakpoints.medium {
+                    font-weight: 700;
+                    padding-left: 4rem;
+                    font-size: 5rem;
+                    line-height: 5rem;
+            
+                }
 
             @include breakpoints.large {
                 font-weight: 700;
