color names have been changed

--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -1,10 +1,10 @@
 /************* primary colors ********************/
 $color-primary-dark: #323232;
-$silver: #AFAFAF;
+$color-primary-light: #AFAFAF;
 $white: #ffffff;
 
 /*************secondary colors *****************/
 
-$dark-black: #000000;
+$color-secondary-dark: #000000;
 $mercury: #E1E1E1;
 $alabaster: #FAFAFA;
