--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -66,7 +66,7 @@
             margin-left: 30px;
             font-weight: 400;
             padding-bottom: 25px;
-            font-size: 1rem;
+            font-weight: 700;
             line-height: 2rem;
         }
     }
@@ -76,8 +76,11 @@
         text-decoration: none;
         width: 100%;
         color: $mercury;
+        
     }
 }
+
+
 
 
 @include breakpoints.medium {
