--- a/styles/shows.css
+++ b/styles/shows.css
@@ -86,7 +86,7 @@
 .main__hero--header {
   top: 0;
   left: 0;
-  margin: 0;
+  margin: -4px;
   position: absolute;
   text-align: left;
   padding-top: 7%;
