--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -40,7 +40,7 @@
         &--header {
             top: 0;
             left: 0;
-            margin: 0;
+            margin: -4px;
             position: absolute;
             text-align: left;
             padding-top: 7%;
