--- a/styles/partials/_main-content.scss
+++ b/styles/partials/_main-content.scss
@@ -272,19 +272,23 @@
     &__right {
         width: 80%;
         margin-left: 0;
+        display: flex;
+        flex-direction: column;
     }
 
     &__img {
-        width: 36px;
-        height: 36px;
+        width: 2.25rem;
+        height: 2.25rem;
         border: 1px solid white;
-        margin-left: 5px;
+        margin-left: .3125rem;
         position: relative;
         border-radius: 50%;
+        margin-top: 1.875rem;
 
         @include breakpoints.medium {
-            width: 48px;
-            height: 48px;
+            width: 3rem;
+            height: 3rem;
+            margin-top: 1.875rem;
         }
     }
 
@@ -305,7 +309,7 @@
         box-shadow: none;
         border-radius: 5px;
         border: 1px solid $mercury;
-        width: 70vmax;
+        width: 100%;
         color: $color-secondary-dark;
         margin: 0 auto;
         background-color: $alabaster;
@@ -318,7 +322,7 @@
     &__textarea--item {
         height: 10rem;
         box-shadow: none;
-        width: 70vmax;
+        width: 100%;
         color: $color-secondary-dark;
         background-color: $alabaster;
         border-radius: 5px;
@@ -333,23 +337,29 @@
     &__button {
         height: 4.375rem;
         align-items: center;
-        margin: 0 auto;
+        margin: 0.5rem 0 0.5rem 0;
     }
 
     &__button--btn {
-        height: 40px;
-        max-width: 100vw;
+        height: 2.5rem;
+        width: 100%;
+        display: block;
         border-radius: .3125rem;
         background: $color-primary-dark;
         color: $white;
         font-family: "Avenir";
-        font-weight: 600;
-        border: 1px solid $color-primary-dark;
-        margin-top: 1rem;
-        margin-bottom: 1rem;
+        font-weight: 700;
+        font-size: .625rem;
+        line-height: 1.25rem;
+        border: none;
         align-items: center;
-        position: absolute;
-            left: 25%;
+        cursor: pointer;
+
+        @include breakpoints.medium{
+font-size: .75rem;
+    line-height: 1.25rem;
+        }
+      
     }
 
     &__button--btn:hover {
@@ -463,16 +473,3 @@
     }
 }
 
-
-
-.form__textarea-item {
-    width: 80%;
-    text-align: center;
-    background: $alabaster;
-    border: 1px solid $color-primary-light;
-    font-family: "Avenir";
-    border-radius: .3125rem;
-    text-align: left;
-    padding-left: 0;
-    margin-left: 0;
-}
