add style changes

--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -8,3 +8,8 @@ $white: #ffffff;
 $color-secondary-dark: #000000;
 $mercury: #E1E1E1;
 $alabaster: #FAFAFA;
+
+
+$padding-mobile-before: 1.5rem;
+$padding-mobile-after: 1rem;
+$padding-mobile-between: 1rem;
